fixes and bukkit modulization